# Xuanwu-bipedal-robot

./: .gitignore  MUJOCO_LOG.TXT  README.md
CAD/: ~$Full_Assem.SLDASM
CAD/Leg/: 2_5X8.SLDPRT  4310_V1_1__VER_B200001.SLDPRT  4310_VER_B_3D0001.SLDPRT  4310__VER_B0001.SLDPRT  Bearing 17_26_5.SLDPRT  DM-J4310 Ankle Connector Left.SLDPRT  DM-J4310 Ankle Connector Right.SLDPRT  DM-J4310 Ankle Connector.SLDPRT  DM-J4310 Foot Joint Board.SLDPRT  DM-J4310 Hip Pitch Connector.SLDPRT  DM-J4310 Hip Roll Connector Left.SLDPRT  DM-J4310 Hip Roll Connector Right.SLDPRT  DM-J4310 Hip Roll Connector.SLDPRT  DM-J4310 Hip Roll Joint Board.SLDPRT  DM-J4310 Hip Roll_Pitch Connector.SLDPRT  DM-J4310 Hip Roll_Pitch Connector_Lower.SLDPRT  DM-J4310 Hip Roll_Pitch Connector_Upper.SLDPRT  DM-J4310 Hip Yaw Connector.SLDPRT  DM-J4310 Knee Pitch Connector Left.SLDPRT  DM-J4310 Knee Pitch Connector Right.SLDPRT  DM-J4310 Knee Pitch Connector.SLDPRT  Foot Connector.SLDPRT  Foot_Connector.SLDPRT  Hip Handle.SLDPRT  Leg_Assem.SLDASM  Motor_Axis_Spacer.SLDPRT  Spacer_17_22_0.1.SLDPRT
CAD/Main Control/: 6S Battery.SLDPRT  Battery Case Cap.SLDPRT  (+9 more)
docs/: act_tor.csv  plot.ipynb  sim_tor.csv  tau_output.csv  调试记录.txt
source_code/high_level/: CMakeLists.txt  README.md  can0_startup_script.sh  xuanwu  xuanwu.cpp
source_code/high_level/algorithms/inc/: RL_inference.h  controls.h  dynamics.h  estimations.h  kinematics.h  robot.h  robot_configs.h  robot_types.h  user_math.h  walking_patterns.h
source_code/high_level/algorithms/src/: RL_inference.cpp  controls.cpp  dynamics.cpp  estimations.cpp  kinematics.cpp  robot.cpp  user_math.cpp  walking_patterns.cpp
source_code/high_level/data_plotter/: data_exporter.cpp  data_exporter.h  data_visualizer.py  log.csv  plot_result.ipynb
source_code/high_level/devices/inc/: CAN.h  IMU.h  STM32_protocol.h  command.h  motor.h
source_code/high_level/devices/src/: CAN.cpp  IMU.cpp  STM32_protocol.cpp
source_code/high_level/inc/: CAN.h  controls.h  kinematics.h  robot_types.h
source_code/high_level/src/: CAN.cpp  controls.cpp  dynamics.cpp  kinematics.cpp
(+697 files in other folders)
